@@ -140,6 +140,8 @@ module Make (C:Sem.Config)(V:Value.S)
     | ARM.SetFlags -> write_flag ARM.Z Op.Eq v1 v2 ii
     | ARM.DontSetFlags -> M.unitT ()
 
+    let atomic_pair_allowed _ _ = true
+
     let build_semantics ii = 
       M.addT (A.next_po_index ii.A.program_order_index)
         begin match ii.A.inst with
