@@ -115,6 +115,8 @@ module Make (C:Sem.Config)(V:Value.S)
     let tr_mov r op ii = 
       (tr_op ii op) >>= (fun v -> write_reg r v ii) 
 
+    let atomic_pair_allowed _ _ = true
+
     let build_semantics ii = 
       let build_semantics_inner ii =
 	match ii.A.inst with
