@@ -83,6 +83,8 @@ module Make (C:Sem.Config)(V:Value.S)
       M.mk_singleton_es (Act.Commit) ii
 
 (* Entry point *)
+    let atomic_pair_allowed _ _ = true
+
     let build_semantics ii =
       M.addT (A.next_po_index ii.A.program_order_index)
         begin match ii.A.inst with
